--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -96,11 +96,13 @@ dependencies:
   purchases_flutter: ^8.1.4
   in_app_purchase: ^3.2.0
   in_app_purchase_storekit: ^0.3.18+1
+  logger: ^2.4.0
 
 dependency_overrides:
   http: ^1.2.1
   uuid: ^4.4.0
   js: ^0.7.1
+
 
 dev_dependencies:
   flutter_launcher_icons: 0.13.1
