--- a/app/android/gradle.properties
+++ b/app/android/gradle.properties
@@ -2,3 +2,7 @@ org.gradle.jvmargs=-Xmx4608m
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+android.enableR8.fullMode=false
